# empty-status

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  SPEC.md  config.example.toml
crates/empty-status-macros/: Cargo.toml
crates/empty-status-macros/src/: lib.rs
features/: unit-machine.md
scripts/: check.py  install.py
src/: config.rs  config_tests.rs  core.rs  display.rs  main.rs  registry.rs  units.rs  util.rs
src/machine/: effects.rs  http.rs  mod.rs  runtime.rs  types.rs
src/machine/units/: bat.rs  cpu.rs  disk.rs  legacy.rs  mem.rs  mod.rs  net.rs  time.rs  weather.rs  wifi.rs
src/render/: color.rs  doc.rs  markup.rs  mod.rs  pango.rs
src/units/: bat.rs  cpu.rs  disk.rs  mem.rs  net.rs  time.rs  weather.rs  wifi.rs
