[package]
name = "empty-status"
version = "1.0.0"
edition = "2021"
description = "an i3 status bar"
authors = ["空"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
num_cpus = "1.16"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["fmt", "env-filter"]}
tracing-appender = "0.2.3"
sysinfo = "0.36.1"
toml = "0.9.2"
inventory = "0.3.20"
serde-inline-default = "0.2.3"
serde_scan = "0.4.1"
strum = "0.27.2"
strum_macros = "0.27.2"
xdg = "3.0.0"
cute = "0.3.0"
neli-wifi = "0.6.1"
